--- a/.github/workflows/dev-build-deploy-api.yml
+++ b/.github/workflows/dev-build-deploy-api.yml
@@ -60,6 +60,10 @@ jobs:
 
     steps:
       - name: SSH proxy commmand
+        env:
+          INFISICAL_CLIENT_ID: ${{ secrets.INFISICAL_CLIENT_ID }}
+          INFISICAL_CLIENT_SECRET: ${{ secrets.INFISICAL_CLIENT_SECRET }}
+          INFISICAL_PROJECT_ID: ${{ secrets.INFISICAL_PROJECT_ID }}
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.API_HOST}}
@@ -71,6 +75,21 @@ jobs:
             git checkout dev
             git reset --hard origin/dev
             git pull
-            infisical export --env=dev --format=dotenv --path="/api" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.dev.api
+
+            export INFISICAL_TOKEN=$(infisical login \
+              --method=universal-auth \
+              --client-id=${INFISICAL_CLIENT_ID} \
+              --client-secret=${INFISICAL_CLIENT_SECRET} \
+              --silent \
+              --plain)
+
+            infisical export \
+              --token=$INFISICAL_TOKEN \
+              --env=dev \
+              --format=dotenv \
+              --path="/api" \
+              --projectId=$INFISICAL_PROJECT_ID \
+              > ./secrets/.env.dev.api
+            
             docker compose -f docker-compose.api.yml pull api-dev
             docker compose -f docker-compose.api.yml up -d --no-deps --force-recreate api-dev
