--- a/.github/workflows/dev-build-deploy-web.yml
+++ b/.github/workflows/dev-build-deploy-web.yml
@@ -49,6 +49,10 @@ jobs:
     steps:
       - name: SSH proxy commmand
         uses: appleboy/ssh-action@v1
+        env:
+          INFISICAL_CLIENT_ID: ${{ secrets.INFISICAL_CLIENT_ID }}
+          INFISICAL_CLIENT_SECRET: ${{ secrets.INFISICAL_CLIENT_SECRET }}
+          INFISICAL_PROJECT_ID: ${{ secrets.INFISICAL_PROJECT_ID }}
         with:
           host: ${{ secrets.WEB_HOST }}
           username: root
@@ -59,7 +63,22 @@ jobs:
             git checkout dev
             git reset --hard origin/dev
             git pull
-            infisical export --env=dev --format=dotenv --path="/web" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.dev.web
+
+            export INFISICAL_TOKEN=$(infisical login \
+              --method=universal-auth \
+              --client-id=${INFISICAL_CLIENT_ID} \
+              --client-secret=${INFISICAL_CLIENT_SECRET} \
+              --silent \
+              --plain)
+
+            infisical export \
+              --token=$INFISICAL_TOKEN \
+              --env=dev \
+              --format=dotenv \
+              --path="/web" \
+              --projectId=$INFISICAL_PROJECT_ID \
+              > ./secrets/.env.dev.web            
+            
             docker compose -f docker-compose.web.yml pull web-dev
             docker compose -f docker-compose.web.yml up -d --no-deps --force-recreate web-dev
 
