--- a/.github/workflows/dev-build-deploy-api.yml
+++ b/.github/workflows/dev-build-deploy-api.yml
@@ -60,10 +60,6 @@ jobs:
 
     steps:
       - name: SSH proxy commmand
-        env:
-          INFISICAL_CLIENT_ID: ${{ secrets.INFISICAL_CLIENT_ID }}
-          INFISICAL_CLIENT_SECRET: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          INFISICAL_PROJECT_ID: ${{ secrets.INFISICAL_PROJECT_ID }}
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.API_HOST}}
@@ -78,8 +74,8 @@ jobs:
 
             export INFISICAL_TOKEN=$(infisical login \
               --method=universal-auth \
-              --client-id=${INFISICAL_CLIENT_ID} \
-              --client-secret=${INFISICAL_CLIENT_SECRET} \
+              --client-id='${{ secrets.INFISICAL_CLIENT_ID }}' \
+              --client-secret='${{ secrets.INFISICAL_CLIENT_SECRET }}' \
               --silent \
               --plain)
 
@@ -88,7 +84,7 @@ jobs:
               --env=dev \
               --format=dotenv \
               --path="/api" \
-              --projectId=$INFISICAL_PROJECT_ID \
+              --projectId='${{ secrets.INFISICAL_PROJECT_ID }}' \
               > ./secrets/.env.dev.api
             
             docker compose -f docker-compose.api.yml pull api-dev
