--- a/.github/workflows/dev-build-deploy-web.yml
+++ b/.github/workflows/dev-build-deploy-web.yml
@@ -49,10 +49,6 @@ jobs:
     steps:
       - name: SSH proxy commmand
         uses: appleboy/ssh-action@v1
-        env:
-          INFISICAL_CLIENT_ID: ${{ secrets.INFISICAL_CLIENT_ID }}
-          INFISICAL_CLIENT_SECRET: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          INFISICAL_PROJECT_ID: ${{ secrets.INFISICAL_PROJECT_ID }}
         with:
           host: ${{ secrets.WEB_HOST }}
           username: root
@@ -66,8 +62,8 @@ jobs:
 
             export INFISICAL_TOKEN=$(infisical login \
               --method=universal-auth \
-              --client-id=${INFISICAL_CLIENT_ID} \
-              --client-secret=${INFISICAL_CLIENT_SECRET} \
+              --client-id='${{ secrets.INFISICAL_CLIENT_ID }}' \
+              --client-secret='${{ secrets.INFISICAL_CLIENT_SECRET }}' \
               --silent \
               --plain)
 
@@ -76,8 +72,8 @@ jobs:
               --env=dev \
               --format=dotenv \
               --path="/web" \
-              --projectId=$INFISICAL_PROJECT_ID \
-              > ./secrets/.env.dev.web            
+              --projectId='${{ secrets.INFISICAL_PROJECT_ID }}' \
+              > ./secrets/.env.dev.web      
             
             docker compose -f docker-compose.web.yml pull web-dev
             docker compose -f docker-compose.web.yml up -d --no-deps --force-recreate web-dev
