--- a/.github/workflows/prod-build-deploy-api.yml
+++ b/.github/workflows/prod-build-deploy-api.yml
@@ -62,10 +62,6 @@ jobs:
 
     steps:
       - name: SSH proxy commmand
-        env:
-          INFISICAL_CLIENT_ID: ${{ secrets.INFISICAL_CLIENT_ID }}
-          INFISICAL_CLIENT_SECRET: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          INFISICAL_PROJECT_ID: ${{ secrets.INFISICAL_PROJECT_ID }}
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.API_HOST }}
@@ -80,8 +76,8 @@ jobs:
 
             export INFISICAL_TOKEN=$(infisical login \
               --method=universal-auth \
-              --client-id=${INFISICAL_CLIENT_ID} \
-              --client-secret=${INFISICAL_CLIENT_SECRET} \
+              --client-id='${{ secrets.INFISICAL_CLIENT_ID }}' \
+              --client-secret='${{ secrets.INFISICAL_CLIENT_SECRET }}' \
               --silent \
               --plain)
 
@@ -90,7 +86,7 @@ jobs:
               --env=prod \
               --format=dotenv \
               --path="/api" \
-              --projectId=$INFISICAL_PROJECT_ID \
+              --projectId='${{ secrets.INFISICAL_PROJECT_ID }}' \
               > ./secrets/.env.api
                         
             docker compose -f docker-compose.api.yml pull api
