--- a/.github/workflows/prod-build-deploy-web.yml
+++ b/.github/workflows/prod-build-deploy-web.yml
@@ -67,8 +67,8 @@ jobs:
 
             export INFISICAL_TOKEN=$(infisical login \
               --method=universal-auth \
-              --client-id=${INFISICAL_CLIENT_ID} \
-              --client-secret=${INFISICAL_CLIENT_SECRET} \
+              --client-id='${{ secrets.INFISICAL_CLIENT_ID }}' \
+              --client-secret='${{ secrets.INFISICAL_CLIENT_SECRET }}' \
               --silent \
               --plain)
 
@@ -77,7 +77,7 @@ jobs:
               --env=prod \
               --format=dotenv \
               --path="/web" \
-              --projectId=$INFISICAL_PROJECT_ID \
+              --projectId='${{ secrets.INFISICAL_PROJECT_ID }}' \
               > ./secrets/.env.web
             
             docker compose -f docker-compose.web.yml pull web
