--- a/.github/workflows/prod-build-deploy-email-worker.yml
+++ b/.github/workflows/prod-build-deploy-email-worker.yml
@@ -3,7 +3,7 @@ name: Deploy Email Worker to Production
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'apps/api/**'
       - 'infra/docker-compose.api.yml'
