--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "echarts": "^6.0.0",
     "js-cookie": "^3.0.5",
     "ky": "^1.8.1",
     "lodash.debounce": "^4.0.8",
