feat: schools chart and percentages

--- a/apps/api/docs/swagger.yaml
+++ b/apps/api/docs/swagger.yaml
@@ -450,7 +450,8 @@ components:
       properties:
         count:
           type: integer
-        school: {}
+        school:
+          type: string
       required:
       - count
       - school
